--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DATABASE_URL="sqlserver://10.200.72.22:1433;database=TestDB;user=rvallejos;password=rvallejos.N4v1s;encrypt=false;trustServerCertificate=true"
+
+NEXTAUTH_URL="http://localhost:3000"
